Fixed issue where the avatar is not visible on Firefox

--- a/packages/p2p/src/components/online-status/online-status.scss
+++ b/packages/p2p/src/components/online-status/online-status.scss
@@ -20,65 +20,28 @@
 
     &__avatar {
         position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: fit-content;
+        height: fit-content;
 
-        @mixin online-status-image__base {
-            align-items: center;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-        }
-
-        &--large {
-            .online-status__avatar-image {
-                @include online-status-image__base;
-                width: 40px;
-                height: 40px;
-                mask-image: radial-gradient(circle 7px at 36px 32px, transparent 30px, var(--general-main-1) 0);
-            }
-
-            .online-status__icon {
-                width: 1rem;
-                height: 1rem;
-                bottom: 3px;
-                right: -6px;
-            }
-        }
-
-        &--medium {
-            .online-status__avatar-image {
-                @include online-status-image__base;
-                width: 32px;
-                height: 32px;
-                mask-image: radial-gradient(circle 6px at 27px 29px, transparent 30px, var(--general-main-1) 0);
-            }
-
-            .online-status__icon {
-                width: 0.85rem;
-                height: 0.85rem;
-                bottom: -1.5px;
-                right: -4.5px;
-            }
-        }
-
-        &--small {
-            .online-status__avatar-image {
-                @include online-status-image__base;
-                width: 24px;
-                height: 24px;
-                mask-image: radial-gradient(circle 5px at 20px 22px, transparent 30px, var(--general-main-1) 0);
-            }
-
-            .online-status__icon {
-                width: 0.75rem;
-                height: 0.75rem;
-                bottom: -2px;
-                right: -5px;
-            }
+        &-text {
+            position: absolute;
         }
 
         & .online-status__icon {
             position: absolute;
-            z-index: 9999;
+            bottom: -0.3px;
+            right: -0.3px;
+            margin: 0;
+            border-radius: 50%;
+            transform: scale(1.1);
+
+            @include mobile {
+                bottom: -0.1px;
+                right: -0.1px;
+            }
         }
     }
 }
